35) kernel: net: make skb->skb_iif always track skb->dev.<br>
36) kernel: net: remove protocol from struct dst_ops.<br>
37) kernel: net: ipv6: make unsolicited report intervals configurable for mld.<br>
38) kernel: net: ipv6: mld: fix v1/v2 switchback timeout to rfc3810, 9.12.<br>
39) kernel: net: ipv4: disallow non-namespace aware protocols to register only if namespaces enabled.<br>
40) kernel: net: ipv4: raise tcp PMTU probe mss base size.<br>
41) kernel: net: ipv4: ip_check_defrag should not assume that skb_network_offset is zero.<br>
42) kernel: net: ipv4: use binary search to choose tcp PMTU probe_size.<br>
43) kernel: net: ipv4: create probe timer for tcp PMTU as per RFC4821.<br>
44) kernel: net: neigh: keep neighbour cache entries if number of them is small enough.<br>
45) kernel: net: neigh: optimize neighbor entry size calculation.<br>
46) kernel: net: neigh: no need to call lookup_neigh_parms in neigh_parms_alloc.<br>
47) kernel: net: neigh: disallow un-init_net to change thresh of neigh.<br>
48) kernel: net: netfilter: nf_conntrack: use RCU safe kfree for conntrack extensions.<br>
49) kernel: net: netfilter: nf_conntrack: fix RCU race in nf_conntrack_find_get.<br>
50) kernel: net: bridge: reset bridge mtu after deleting an interface.<br>
51) kernel: net: packet: make packet_snd fail on len smaller than l2 header.<br>
52) kernel: net: neighbour: fix ndm_type type error issue.<br>
53) kernel: timekeeping: Fix HRTICK related deadlock from ntp lock changes.<br>
54) kernel: sched/__wake_up_sync_key(): Fix nr_exclusive tasks which lead to WF_SYNC clearing.<br>
55) kernel: sched: fix HRTICK.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add dsvfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>