@@ -808,6 +808,7 @@ CONFIG_LEGACY_PTY_COUNT=64
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
 CONFIG_RALINK_GPIO_BTN_RESET=1
+CONFIG_RALINK_GPIO_BTN_WPS=0
 CONFIG_RALINK_GPIO_LED=y
 # CONFIG_RALINK_GPIO_LED_SYS is not set
 CONFIG_RALINK_GPIO_LED_VPN=y
