@@ -974,6 +974,7 @@ CONFIG_LEGACY_PTY_COUNT=64
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
 CONFIG_RALINK_GPIO_BTN_RESET=13
+CONFIG_RALINK_GPIO_BTN_WPS=0
 CONFIG_RALINK_GPIO_LED=y
 CONFIG_RALINK_GPIO_LED_SYS=y
 # CONFIG_RALINK_GPIO_LED_USB is not set
