@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.106.18 Kernel Configuration
+# Linux/mips 3.4.106.21 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1001,7 +1001,8 @@ CONFIG_LEGACY_PTY_COUNT=64
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_RALINK_GPIO=y
-CONFIG_RALINK_GPIO_BTN_RESET=1
+CONFIG_RALINK_GPIO_BTN_RESET=41
+CONFIG_RALINK_GPIO_BTN_WPS=43
 CONFIG_RALINK_GPIO_LED=y
 # CONFIG_RALINK_GPIO_LED_SYS is not set
 CONFIG_RALINK_GPIO_LED_USB=y
@@ -1680,14 +1681,13 @@ CONFIG_KERNEL_NVRAM=y
 #
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
-# CONFIG_RAETH_NAPI_GRO is not set
-# CONFIG_RAETH_32B_DESC is not set
 # CONFIG_RAETH_JUMBOFRAME is not set
 CONFIG_RAETH_HW_VLAN_RX=y
 CONFIG_RAETH_BQL=y
 CONFIG_RAETH_HW_VLAN_TX=y
 CONFIG_RAETH_CHECKSUM_OFFLOAD=y
 CONFIG_RAETH_SG_DMA_TX=y
+# CONFIG_RAETH_NAPI_GRO is not set
 CONFIG_RAETH_TSO=y
 CONFIG_RAETH_TSOV6=y
 # CONFIG_GE1_MII_FORCE_100 is not set
