@@ -15,6 +15,11 @@ config RALINK_GPIO_BTN_RESET
 	depends on RALINK_GPIO
 	default 1
 
+config RALINK_GPIO_BTN_WPS
+	int "GPIO for wps button."
+	depends on RALINK_GPIO
+	default 0
+
 config RALINK_GPIO_LED
 	bool "Ralink GPIO LED Support"
 	depends on RALINK_GPIO
